--- a/index.html
+++ b/index.html
@@ -19,6 +19,34 @@
         </ul>
       </nav>
     </header>
+
+    <!-- ======================================== 
+          Our Main Hero Section Start  
+    ========================================  -->
+
+    <main>
+      <section class="section-hero section">
+        <div class="container grid grid-two-col">
+          <div class="section-hero-data">
+            <p class="hero-top-data">This is Me</p>
+            <h1 class="hero-heading">Somnath Mandal</h1>
+            <p class="hero-para">
+              Welcome to my portfolio website! I'm a passionate and aspiring
+              full stack web developer with a strong desire to create innovative
+              solutions and push the boundaries of technology. With a deep love
+              for coding and problem-solving, I am constantly seeking
+              opportunities to learn and grow in this ever-evolving field.
+            </p>
+            <button>
+              <a href="#" class="btn hireme-btn">Hire Me</a>
+            </button>
+          </div>
+          <div class="section-hero-image">
+            <img src="images/my.jpg" alt="hero-image" />
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
